Thu Sep 20 12:29:09 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/ACE_SSL_LIB.dsp:
	* ace/SSL/ACE_SSL_LIB.dsw:

	  New static build MSVC++ project and workspace files for the
	  ACE_SSL library contributed by Jonathan Reis <reis@stentor.com>.
	  [Bug 1032]

Thu Sep 20 12:16:13 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK.cpp (enable, disable):

	  Removed unreachable "return" statements.  [Bug 1033]

	* ace/SSL/SSL_SOCK_Stream.i (ACE_SSL_SOCK_Stream):
	* ace/SSL/SSL_SOCK_Stream.cpp:

	  Moved constructor to the ".cpp" file since to prevent inclusion
	  of `ace/Log_Msg.h' in `SSL_SOCK_Stream.h'.  This fixes problems
	  with some platforms needing the Log_Msg include to pull in the
	  ACE_ERROR macros without needlessly increasing inter-header
	  dependencies and inclusions.  [Bug 1034]

Thu Sep 20 14:44:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/Process.cpp (ACE_Process_Options): Moved avoid_zombies_
          initialization outside the !Win32 section. Thanks to Johnny
          Willemsen <johnny.willemsen@meco.nl> for this fix.

Thu Sep 20 06:28:50 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-hpux-11.00.h:

          Reverting the change from "Wed Aug 29 15:32:10 2001  Douglas C.
          Schmidt  <schmidt@macarena.cs.wustl.edu>".  HP-UX 11.00 does
          not actually support pread/pwrite.

Wed Sep 19 16:56:02 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/OS.h (THR_SCOPE_PROCESS and THR_SCOPE_SYSTEM): Added
	  definitions for THR_SCOPE_PROCESS and THR_SCOPE_SYSTEM on
	  platforms that do not support threads.

Wed Sep 19 16:54:04 2001  Jeff Parsons <parsons@cs.wustl.edu>

        * ace/Containers_T.cpp:

          In copy constructor for ACE_Double_Linked_List, added line to
          copy the size of the rhs to the lhs. The new list was ending
          up with a garbage value for its size.

Wed Sep 19 14:15:08 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp: